--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EasyAngular</title>
+  <title>Snatch</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" type="image/x-icon" href="./assets/img/favicon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon/favicon.png">
 
   <!-- NOTE RealFavIconGenerator -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png"/>
