--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,11 @@
   <link rel="mask-icon" href="assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5"/>
   <meta name="msapplication-TileColor" content="#da532c"/>
   <meta name="theme-color" content="#ffffff"/>
-
+  <style>
+    body {
+      padding-right: 0px!important;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
