--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png"/>
   <link rel="manifest" href="assets/img/favicon/manifest.json"/>
   <link rel="mask-icon" href="assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="msapplication-TileColor" content="#da532c"/>
   <meta name="theme-color" content="#ffffff"/>
   <style>
